# vm

./: CMakeCache.txt  CMakeLists.txt  Makefile  asm  cmake_install.cmake  test.asm
src/: Assembler.cpp  Assembler.hpp  Byte.hpp  Bytecode.cpp  Bytecode.hpp  Colors.hpp  Dynamic.cpp  Exceptions.hpp  File.cpp  File.hpp  GarbageCollector.cpp  GarbageCollector.hpp  Heap.cpp  Heap.hpp  Hexdump.cpp  Hexdump.hpp  Machine.cpp  Machine.hpp  MachineCalls.cpp  MachineCalls.hpp  Main.cpp  Object.cpp  Object.hpp  Opcodes.hpp  Registers.cpp  Registers.hpp  Stack.cpp  Stack.hpp
src/dynamic/: Dynamic.hpp
